Order the declared rests, which a Map.of was salting per JVM launch
Every entry of DECLARED_RESTS lands in the emitted input_defaults through one
putIfAbsent apiece into an insertion-ordered map, so the map's ITERATION order
is shipped bytes. Map.of salts that order per JVM launch from two entries up,
and both entries here are absent from what the resolver returns - they are
declared precisely because no constructor settles them - so both are appended
and either order ships.

It reads as a table that does not reproduce, which is the one precondition the
whole parity gate rests on. It surfaced as a mover on manifest.tooling-tables
that nothing had changed: two runs of entityModels on the same tree emitted the
two keys one way round and a third emitted the other, and a run that agrees
with the tree it was taken from is a coin toss rather than evidence.

A LinkedHashMap in the order this class already documents them. Measured across
three separate JVM launches rather than three tasks in one daemon, that being
the axis the salt lives on: all three hash the emitted table identically. The
table moves by the two lines that were flapping and by nothing else, and the
diagnostics log is identical sorted against a clean-tree baseline.